syntax = "proto3";

option java_package = "proto";

service DataProcessing {
  rpc processData (DataRequest) returns (DataResponse);
}

message DataRequest {
  string name = 1;
  string cnp = 2;
}

message DataResponse {
  string response = 1;
}